Add cassandra.yaml entry

--- a/conf/cassandra.yaml
+++ b/conf/cassandra.yaml
@@ -1617,6 +1617,8 @@ drop_compact_storage_enabled: false
 # The two thresholds default to -1 to disable.
 # secondary_indexes_per_table_warn_threshold: -1
 # secondary_indexes_per_table_fail_threshold: -1
+# Guardrail to enable or disable the creation of secondary indexes
+# secondary_indexes_enabled: true
 # Guardrail to warn or fail when creating more materialized views per table than threshold.
 # The two thresholds default to -1 to disable.
 # materialized_views_per_table_warn_threshold: -1
