--- a/build.xml
+++ b/build.xml
@@ -116,6 +116,8 @@
     <!-- skip flushing schema tables during tests -->
     <property name="cassandra.test.flush_local_schema_changes" value="false" />
 
+    <property name="cassandra.test.fail_on_forbidden_log_entries" value="false"/>
+
     <!-- https://www.eclemma.org/jacoco/ -->
     <property name="jacoco.export.dir" value="${build.dir}/jacoco/" />
     <property name="jacoco.partials.dir" value="${jacoco.export.dir}/partials" />
@@ -1416,6 +1418,7 @@
         <jvmarg value="-DQT_SHRINKS=0"/>
         <jvmarg value="-Dcassandra.disable_tcactive_openssl=true" />
         <jvmarg value="-Dcassandra.use_nix_recursive_delete=true"/>
+        <jvmarg value="-Dcassandra.test.fail_on_forbidden_log_entries=${cassandra.test.fail_on_forbidden_log_entries}"/>
         <jvmarg line="${test-jvmargs}" />
         <optjvmargs/>
         <!-- Uncomment to debug unittest, attach debugger to port 1416 -->
