CASSANDRA-17560: Migrate track_warnings to more standard naming conventions and use latest configuration types rather than long

--- a/test/conf/cassandra.yaml
+++ b/test/conf/cassandra.yaml
@@ -53,14 +53,11 @@ materialized_views_enabled: true
 drop_compact_storage_enabled: true
 file_cache_enabled: true
 auto_hints_cleanup_enabled: true
-track_warnings:
-    enabled: true
-    coordinator_read_size:
-        warn_threshold_kb: 1024
-        abort_threshold_kb: 4096
-    local_read_size:
-        warn_threshold_kb: 4096
-        abort_threshold_kb: 8192
-    row_index_size:
-        warn_threshold_kb: 4096
-        abort_threshold_kb: 8192
+
+read_thresholds_enabled: true
+coordinator_read_size_warn_threshold: 1KiB
+coordinator_read_size_fail_threshold: 4KiB
+local_read_size_warn_threshold: 4KiB
+local_read_size_fail_threshold: 8KiB
+row_index_size_warn_threshold: 4KiB
+row_index_size_fail_threshold: 8KiB
